fix: sidebar (scroll/height/overflow) + cta z-index

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ main .main-content{
     height: 100%;
 }
 
+.upper-sidebar{
+    height: 65%;
+}
+
 .lower-sidebar{
     background-color: #000;
     flex-shrink: 1;
@@ -109,9 +113,14 @@ li.active-v{
     color:#fff;
 }
 
-.playlist-nav ul:last-child{
+.playlist-nav{
+    overflow:hidden;
+    height:80%;
+}
+
+.playlist-nav ul{
     overflow-y: auto;
-    height:30vh;
+    height:80%;
 }
 
 .create-playlist{
@@ -144,7 +153,7 @@ li.active-v{
 
     top:0;
     right:0;
-    z-index:1;
+    z-index:3;
 }
 
 .cta-btn{
